--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Display</title>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
   <div class="search-bar">
