--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="./Products.js"></script>
+  <script src="./products.js"></script>
   <div class="page-heading">Available Products</div>
   <div class="search-bar">
     <input type="text" id="search" placeholder="Search products...">
